# comm

./: .dockerignore  .eslintrc.json  .gitignore  README.md  flake.nix  package.json
docs/: dev_environment.md  dev_services.md  nix_dev_env.md
keyserver/: Dockerfile  docker-compose.yml
landing/: button.react.js  footer.css  footer.react.js  global.css  header.css  header.react.js  hero-content.css  keyservers.react.js  qr.css  team.css  team.react.js  webpack.config.cjs
lib/actions/: message-actions.js  user-actions.js
lib/hooks/: disconnected-bar.js  message-preview.js  relationship-prompt.js  (+4 more)
native/: package.json
nix/: amqp-cpp.nix  dev-shell.nix  overlay.nix  protobuf_3_15.nix  tunnelbroker.nix
services/: docker-compose-dev-only.yml  docker-compose.yml  package.json
services/identity/: Cargo.toml  Dockerfile
services/identity/proto/: identity.proto
services/identity/scripts/: keygen.rs
services/identity/src/: config.rs  database.rs  lib.rs  main.rs  opaque.rs  service.rs
services/tunnelbroker/: CMakeLists.txt  Dockerfile  tunnelbroker.env  tunnelbroker.ini  vcpkg.json
services/tunnelbroker/docker/: build_server.sh  install_aws_sdk.sh
services/tunnelbroker/docker-base/: Dockerfile
services/tunnelbroker/docker-base/contents/: install_amqp_cpp.sh  install_aws_sdk.sh  install_cryptopp.sh
services/tunnelbroker/docker-server/contents/: build_server.sh  run_server.sh  run_tests.sh
services/tunnelbroker/docker-server/contents/server/: CMakeLists.txt  generate.sh
services/tunnelbroker/docker-server/contents/server/src/: Constants.h  DatabaseManager.cpp  DatabaseManager.h  Tools.cpp  Tools.h  TunnelBrokerServiceImpl.cpp  TunnelBrokerServiceImpl.h  server.cpp
services/tunnelbroker/docker-server/contents/server/src/Amqp/: AmqpManager.cpp  AmqpManager.h
services/tunnelbroker/docker-server/contents/server/src/Database/: DatabaseManager.cpp  DatabaseManager.h  DeviceSessionItem.cpp  DeviceSessionItem.h  Item.h  MessageItem.cpp  MessageItem.h  PublicKeyItem.cpp  SessionSignItem.cpp  SessionSignItem.h
services/tunnelbroker/docker-server/contents/server/src/DatabaseEntities/: DeviceSessionItem.cpp  DeviceSessionItem.h
services/tunnelbroker/docker-server/contents/server/src/DeliveryBroker/: DeliveryBroker.cpp  DeliveryBroker.h  DeliveryBrokerEntites.h
services/tunnelbroker/docker-server/contents/server/src/Service/: TunnelbrokerServiceImpl.cpp  TunnelbrokerServiceImpl.h
services/tunnelbroker/docker-server/contents/server/src/Tools/: ConfigManager.cpp  ConfigManager.h  CryptoTools.cpp  CryptoTools.h  Tools.cpp  Tools.h
services/tunnelbroker/src/: Constants.h
services/tunnelbroker/src/Amqp/: AmqpManager.cpp  AmqpManager.h
services/tunnelbroker/src/Database/: DatabaseManager.cpp  DeviceSessionItem.cpp  MessageItem.cpp  MessageItem.h  PublicKeyItem.cpp  SessionSignItem.cpp
services/tunnelbroker/src/DeliveryBroker/: DeliveryBroker.cpp  DeliveryBrokerEntites.h
services/tunnelbroker/src/Service/: TunnelbrokerServiceImpl.cpp  TunnelbrokerServiceImpl.h
services/tunnelbroker/src/Tools/: Tools.cpp  Tools.h
services/tunnelbroker/src/_generated/: tunnelbroker.grpc.pb.cc  tunnelbroker.grpc.pb.h  tunnelbroker.pb.cc  tunnelbroker.pb.h
services/tunnelbroker/test/: AmqpManagerTest.cpp  CryptoToolsTest.cpp  DatabaseManagerTest.cpp  DeliveryBrokerTest.cpp  ToolsTest.cpp
web/: SWMansionIcon.react.js  app.react.js  error-boundary.react.js  menu-portal-provider.react.js  menu-portal.css  menu-provider.react.js  menu.css  package.json  root.js  style.css  theme.css  typography.css  url-utils.js  webpack.config.cjs
(+290 files in other folders)
