[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "identity"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "scripts/keygen.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
futures-core = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
opaque-ke = "1.2.0"
argon2 = "0.3"
curve25519-dalek = "3"
sha2 = "0.9"
digest = "0.9"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.6"
